Create UI and link to my github

--- a/index.html
+++ b/index.html
@@ -4,11 +4,33 @@
     <meta charset="UTF-8">
     <title>Calculator</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <main>
-        <h1>Welcome to my calculator</h1>  
-    </main>
+  <body><h1>Taliour's calculator</h1>
+    <div class = calculator-body>
+      <div class="screen"></div>
+      <div class = "buttons">
+        <div class="C icon">C</div>
+        <div class="0 icon">0</div>
+        <div class="= icon">=</div>
+        <div class="+ icon">+</div>
+        <div class="7 icon">7</div>
+        <div class="8 icon">8</div>
+        <div class="9 icon">9</div>
+        <div class="- icon">-</div>
+        <div class="4 icon">4</div>
+        <div class="5 icon">5</div>
+        <div class="6 icon">6</div>
+        <div class="x icon">x</div>
+        <div class="1 icon">1</div>
+        <div class="2 icon">2</div>
+        <div class="3 icon">3</div>
+        <div class="/ icon">/</div>
+      </div>
+    </div>
+    <a href = "https://github.com/taliour"><img src ="./img/githubLogo.png"></a>
 	<script src="script.js"></script>
   </body>
 </html>
