Add UI number function so user can type numbers

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
       <div class="screen"></div>
       <div class = "buttons">
         <div class="C icon">C</div>
-        <div class="0 icon">0</div>
+        <div class="0 icon number">0</div>
         <div class="= icon">=</div>
         <div class="+ icon">+</div>
-        <div class="7 icon">7</div>
-        <div class="8 icon">8</div>
-        <div class="9 icon">9</div>
+        <div class="7 icon number">7</div>
+        <div class="8 icon number">8</div>
+        <div class="9 icon number">9</div>
         <div class="- icon">-</div>
-        <div class="4 icon">4</div>
-        <div class="5 icon">5</div>
-        <div class="6 icon">6</div>
+        <div class="4 icon number">4</div>
+        <div class="5 icon number">5</div>
+        <div class="6 icon number">6</div>
         <div class="x icon">x</div>
-        <div class="1 icon">1</div>
-        <div class="2 icon">2</div>
-        <div class="3 icon">3</div>
+        <div class="1 icon number">1</div>
+        <div class="2 icon number">2</div>
+        <div class="3 icon number">3</div>
         <div class="/ icon">/</div>
       </div>
     </div>
