--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
     <div class = calculator-body>
       <div class="screen"></div>
       <div class = "buttons">
-        <div class="C icon">C</div>
+        <div class="C icon clear">C</div>
         <div class="0 icon number">0</div>
         <div class="= icon">=</div>
-        <div class="+ icon">+</div>
+        <div class="+ icon operator">+</div>
         <div class="7 icon number">7</div>
         <div class="8 icon number">8</div>
         <div class="9 icon number">9</div>
-        <div class="- icon">-</div>
+        <div class="- icon operator">-</div>
         <div class="4 icon number">4</div>
         <div class="5 icon number">5</div>
         <div class="6 icon number">6</div>
-        <div class="x icon">x</div>
+        <div class="x icon operator">x</div>
         <div class="1 icon number">1</div>
         <div class="2 icon number">2</div>
         <div class="3 icon number">3</div>
-        <div class="/ icon">/</div>
+        <div class="/ icon operator">/</div>
       </div>
     </div>
     <a href = "https://github.com/taliour"><img src ="./img/githubLogo.png"></a>
